<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--Input fields-->

    <EditText
        android:id="@+id/purch_priceEditText"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:hint="@string/price"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    Output field for payments by term -->

    <EditText
        android:id="@+id/down_pmt"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:hint="@string/down_pmt"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="@+id/purch_priceEditText"
        app:layout_constraintStart_toStartOf="@+id/purch_priceEditText"
        app:layout_constraintTop_toBottomOf="@+id/purch_priceEditText" />


    <EditText
        android:id="@+id/interest"
        android:layout_width="131dp"
        android:layout_height="40dp"
        android:hint="@string/interest"
        android:inputType="numberDecimal"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="@+id/down_pmt"
        app:layout_constraintStart_toStartOf="@+id/down_pmt"
        app:layout_constraintTop_toBottomOf="@+id/down_pmt" />


    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/button_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest" />

    <TextView
        android:id="@+id/ten_yrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:text="@string/ten_yrLabel"
        app:layout_constraintBottom_toBottomOf="@+id/ten_yrPmt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ten_yrPmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/ten_yrPmt"
        app:layout_constraintStart_toEndOf="@+id/ten_yrLabel"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn" />

    <TextView
        android:id="@+id/twenty_yrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/twenty_yrLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ten_yrLabel" />

    <TextView
        android:id="@+id/twenty_yrPmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/twenty_yrPmt"
        app:layout_constraintBottom_toBottomOf="@+id/twenty_yrLabel"
        app:layout_constraintStart_toEndOf="@+id/twenty_yrLabel"
        app:layout_constraintTop_toTopOf="@+id/twenty_yrLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/thirty_yrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/thirty_yrLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twenty_yrLabel" />

    <TextView
        android:id="@+id/thirty_yrPmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:text="@string/thirty_yrPmt"
        app:layout_constraintBottom_toBottomOf="@+id/thirty_yrLabel"
        app:layout_constraintStart_toEndOf="@+id/thirty_yrLabel"
        app:layout_constraintTop_toBottomOf="@+id/twenty_yrPmt"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/custom_termLabel"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="388dp"
        android:text="@string/custom_termLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/custom_termSeekBar"
        android:layout_width="206dp"
        android:layout_height="38dp"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="30"
        android:min="1"
        android:progress="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_termLabel" />

    <TextView
        android:id="@+id/custom_termOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_termSeekBar" />

    <TextView
        android:id="@+id/custom_numPaymentsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_termOutput" />

    <TextView
        android:id="@+id/custom_paymentAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_numPaymentsTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>